--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-VITE_BASE_URL = http://localhost:3000/api/v1
+VITE_BASE_URL = http://localhost:3000/api/v1 
+
+# deploy krte hue backend ka main deployed link jo ki render pe deploy krke millega vo wala link
+# https://fullstackproject-1-studynotionsample-1.onrender.com/   -> for this one
