--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
+# =====================
 # Logs
+# =====================
 logs
 *.log
 npm-debug.log*
@@ -7,23 +9,42 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# =====================
+# Dependencies
+# =====================
+node_modules/
+
+# =====================
+# Build output
+# =====================
+dist/
+dist-ssr/
+
+# =====================
+# Environment variables (SECRETS)
+# =====================
+.env
+.env.*
+
+# =====================
+# Local config files
+# =====================
 *.local
 
-# Editor directories and files
+# =====================
+# Editor & OS files
+# =====================
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-!.npmrc
 
-# Secrets
-.env
-.env.local
+# =====================
+# npm config
+# =====================
+!.npmrc
